--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -4,7 +4,7 @@
     <!-- BEGIN LOGO -->
     <div class="page-logo">
         <a href="/">
-            <img ng-show="settings.logo" src="{{settings.logo}}" alt="logo" class="logo-default" />
+            <img ng-show="settings.logo" src="/img/explorer-logo.png" alt="logo" class="logo-default" />
         </a>
     </div>
     <!-- END LOGO -->
@@ -44,44 +44,44 @@
                 <li class="active">
                     <a href="/">Home</a>
                 </li>
-                <li class="menu-dropdown mega-menu-dropdown ">
-                    <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="/token" class="dropdown-toggle"> Tokens
-                        <i class="fa fa-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu" style="min-width: 410px">
-                        <li>
-                            <div class="mega-menu-content">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <ul class="mega-menu-submenu">
-                                            <li>
-                                                <a href="/token/0x085fb4f24031eaedbc2b611aa528f22343eb52db" class="iconify">
-                                                    <i class="icon-pin"></i> BitEther</a>
-                                            </li>
-                                            <li>
-                                                <a href="/dao" class="iconify">
-                                                    <i class="icon-trash"></i> TheDAO</a>
-                                            </li>
-                                            <li>
-                                                <a href="/token" class="iconify">
-                                                    <i class="icon-puzzle"></i> View All Tokens </a>
-                                            </li>
+                <!-- //<li class="menu-dropdown mega-menu-dropdown ">
+                //    <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="/token" class="dropdown-toggle"> Tokens
+                //        <i class="fa fa-angle-down"></i>
+                //    </a>
+                //    <ul class="dropdown-menu" style="min-width: 410px">
+                //        <li>
+                //            <div class="mega-menu-content">
+                //                <div class="row">
+                //                    <div class="col-md-6">
+                //                        <ul class="mega-menu-submenu">
+                //                            <li>
+                //                                <a href="/token/0x085fb4f24031eaedbc2b611aa528f22343eb52db" class="iconify">
+                //                                    <i class="icon-pin"></i> BitEther</a>
+                //                            </li>
+                //                            <li>
+                //                                <a href="/dao" class="iconify">
+                //                                    <i class="icon-trash"></i> TheDAO</a>
+                //                            </li>
+                //                            <li>
+                //                                <a href="/token" class="iconify">
+                //                                    <i class="icon-puzzle"></i> View All Tokens </a>
+                //                            </li>
 
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <ul class="mega-menu-submenu">
-                                            <li>
-                                                <a href="/" class="iconify">
-                                                    <i class="icon-paper-clip"></i> View Contracts (N/A)</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
+                //                        </ul>
+                //                    </div>
+                //                    <div class="col-md-6">
+                //                        <ul class="mega-menu-submenu">
+                //                            <li>
+                //                                <a href="/" class="iconify">
+                //                                    <i class="icon-paper-clip"></i> View Contracts (N/A)</a>
+                //                            </li>
+                //                        </ul>
+                //                    </div>
+                //                </div>
+                //            </div>
+                //        </li>
+                //    </ul>
+                </li>  -->
                 <li class="menu-dropdown mega-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle"> Stats
                         <i class="fa fa-angle-down"></i>
@@ -108,10 +108,11 @@
                                                 <a href="/stats/blocktime">
                                                     <i class="fa fa-line-chart"></i> Blocktime Chart</a>
                                             </li>
-                                            <li>
+                                           <!-- <li>
                                                 <a href="/stats/The_bomb_chart">
                                                     <i class="fa fa-line-chart"></i> The bomb chart</a>
-                                            </li>
+                                           </li>
+					   -->
                                         </ul>
                                     </div>
                                 </div>
@@ -119,7 +120,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-dropdown classic-menu-dropdown ">
+               <!-- <li class="menu-dropdown classic-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;"> Misc
                         <i class="fa fa-angle-down"></i>
                     </a>
@@ -135,48 +136,48 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <li class="menu-dropdown classic-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;"> Community
                         <i class="fa fa-angle-down"></i>
                     </a>
                     <ul class="dropdown-menu pull-left">
                         <li>
-                          <a href="https://forum.ethereumclassic.org" target="_blank">
+                          <a href="https://www.matrix.io/index.html#TEAM" target="_blank">
                               <i class="fa fa-group"></i>
-                              <span class="title" data-toggle="tooltip" title="Community Chat"> The Forum</span>
+                              <span class="title" data-toggle="tooltip" title="Community Chat"> The Team</span>
                           </a>
                         </li>
                         <hr>
                         <li>
-                            <a href="https://tokenmint.io" target="_blank">
+                            <a href="https://www.matrix.io/" target="_blank">
                                 <i class="fa fa-leaf"></i>
-                                <span class="title" data-toggle="tooltip" title="ERC223 Token Factory" > TokenMint.io</span>
+                                <span class="title" data-toggle="tooltip" title="ERC223 Token Factory" > Matrix.io</span>
                             </a>
                         </li>
                         <li>
-                            <a href=" https://ethereumproject.github.io/etherwallet/ " target="_blank">
+                            <a href="https://github.com/matrixainetwork" target="_blank">
                                 <i class="fa fa-folder-open"></i>
-                                <span class="title" data-toggle="tooltip" title="Client Side JS ETC Wallet"> ClassicEtherWallet.com</span>
+                                <span class="title" data-toggle="tooltip" title="Client Side JS ETC Wallet"> Github</span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://classicstats.net" target="_blank">
+                            <a href="https://www.matrix.io/50ktps/index.html" target="_blank">
                                 <i class="fa fa-bar-chart"></i>
                                 <span class="title" data-toggle="tooltip" title="Mainnet Stats"> Live Network Stats </span>
                             </a>
                         </li>
                         <li>
-                            <a href="http://statebot.info" target="_blank">
+                            <a href="https://github.com/MatrixAINetwork/MATRIXAIPOC_GO" target="_blank">
                                 <i class="fa fa-android"></i>
-                                <span class="title" data-toggle="tooltip" title="JSON state dumps for analysis"> Statebot.io </span>
+                                <span class="title" data-toggle="tooltip" title="JSON state dumps for analysis">MATRIXAIPOC_GO </span>
                             </a>
                         </li>
                         <hr>
                         <li>
-                            <a href="http://teststats.epool.io/" target="_blank">
+                            <a href="https://etherscan.io" target="_blank">
                                 <i class="fa fa-bar-chart"></i>
-                                <span class="title" data-toggle="tooltip" title="Live Testnet Stats">Morden network stats </span>
+                                <span class="title" data-toggle="tooltip" title="Live Testnet Stats">Etherscan.io </span>
                             </a>
                         </li>
 
